force-app/main/default/objects/WorkExperience__c.object
<CustomObject>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsCurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Portfolio__c</referenceTo>
        <relationshipLabel>Work Experiences</relationshipLabel>
        <relationshipName>WorkExperience</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkLocation__c</fullName>
        <label>Work Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Work Experience</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WE-{0000}</displayFormat>
        <label>Work Experience Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>